--- a/css/footer.css
+++ b/css/footer.css
@@ -1,70 +1,91 @@
-.footer{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    min-height: 300px;
-    justify-content: center;
-    align-items: center;
+.footer {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  min-height: 300px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-@media(max-width:600px){
-    .footer{
-        flex-direction: column;
-    }
-}
-.footer-inner{
-    display: inline-block;
-    width: 25%;
-    font-family: 'Exo',sans-serif;
-    /* min-width: 300px; */
-    text-align: center;
-   
-}
-.footer-inner p{
-    color: #282828;
-}
-.footer-inner h3{
-   color: black;
-   padding-bottom: 30px;
- 
-}
-.footer-inner a{
-text-decoration: none;
-color: #282828;
-transition:0.7s;
 
+@media (max-width: 600px) {
+  .footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
-.footer-inner a:hover{
-    color: #ff6d6d;
-   
+.footer-inner {
+  display: inline-block;
+  width: 25%;
+  font-family: "Exo", sans-serif;
+  /* min-width: 300px; */
+  text-align: center;
 }
-.input-container{
-    vertical-align: top;
-    width: 270px;
+
+.footer-inner p {
+  color: #282828;
 }
-.btn-mail{
-    width: 50px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    background-color: #ff6d6d;
-    border:#ff6d6d;
-    cursor: pointer;
-    transition: 0.7s;
+
+.footer-inner h3 {
+  color: black;
+  padding-bottom: 30px;
 }
-.input-container input[type=email]{
-    width: 215px;
-    padding: 20px 25px;
-    box-sizing: border-box;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border: 2px solid #b8b8bf;
-    border-right: none;
-    font-family: Exo_r;
-    font-size: 16px;
-    text-transform: uppercase;
+
+.footer-inner a {
+  text-decoration: none;
+  color: #282828;
+  -webkit-transition: 0.7s;
+  transition: 0.7s;
 }
-.input-container input{
-    display: inline-block;
-    vertical-align: top;
-    height: 50px;
+
+.footer-inner a:hover {
+  color: #ff6d6d;
+}
+
+.input-container {
+  vertical-align: top;
+  width: 270px;
+}
+
+.btn-mail {
+  width: 50px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  background-color: #ff6d6d;
+  border: #ff6d6d;
+  cursor: pointer;
+  -webkit-transition: 0.7s;
+  transition: 0.7s;
+}
+
+.input-container input[type=email] {
+  width: 215px;
+  padding: 20px 25px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border: 2px solid #b8b8bf;
+  border-right: none;
+  font-family: Exo_r;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
+.input-container input {
+  display: inline-block;
+  vertical-align: top;
+  height: 50px;
 }
