--- a/css/header.css
+++ b/css/header.css
@@ -1,52 +1,69 @@
-.header{
-    position: fixed;
-    top: 50%;
-    left: 80%;
-    text-align: right;
-    z-index: 20;
-    width: 20%;
-    display: flex;
-    flex-direction: column;
+.header {
+  position: fixed;
+  top: 50%;
+  left: 80%;
+  text-align: right;
+  z-index: 20;
+  width: 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-.header a{
-    text-decoration: none;
-    padding: 5px;
-    color: #ff6d6d;
-    font-weight: 700;
-}
-.link{
-    font-family: 'Exo';
-    color: aliceblue;
-    font-size: 16px;
-    
-}
-.items{
-    padding: 10px 10px 0px 0px;
-    display: flex;
-    flex-direction: row;
-    justify-content: right;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-}
-.nav-link-btn{
-    width: 15px;
-    height: 15px;
-    margin-left: 10px;
-    border: 2px solid rgba(0,0,0,0.8);
-    border-radius: 50%;
-    margin-right: 10px;
-    background-color: #ff6d6d;
-    cursor: pointer;
+.header a {
+  text-decoration: none;
+  padding: 5px;
+  color: #ff6d6d;
+  font-weight: 700;
 }
 
-.link{
-    display: inline;
+.link {
+  font-family: "Exo";
+  color: aliceblue;
+  font-size: 16px;
 }
+
+.items {
+  padding: 10px 10px 0px 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: right;
+      -ms-flex-pack: right;
+          justify-content: right;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.nav-link-btn {
+  width: 15px;
+  height: 15px;
+  margin-left: 10px;
+  border: 2px solid rgba(0, 0, 0, 0.8);
+  border-radius: 50%;
+  margin-right: 10px;
+  background-color: #ff6d6d;
+  cursor: pointer;
+}
+
+.link {
+  display: inline;
+}
+
 .items-name {
-    font-family: 'Exo', sans-serif;
-    font-weight: 500;
-    color: #ff6d6d;
-    opacity: 0;
+  font-family: "Exo", sans-serif;
+  font-weight: 500;
+  color: #ff6d6d;
+  opacity: 0;
 }
