--- a/css/introduction.css
+++ b/css/introduction.css
@@ -1,62 +1,64 @@
-.introduction{
-    background-image: url(../img/bg/bgintro.jpg);
-    background-position: right;
-    -webkit-background-size: auto 100%;
-    -moz-background-size: auto 100%;
-    -o-background-size: auto 100%;
-    background-size: auto 100%;
-    background-repeat: no-repeat;
-    padding-left: 0;
-    padding-right: 0;
-    padding-bottom: 160px;
-    min-height: 300px;
+.introduction {
+  background-image: url(../img/bg/bgintro.jpg);
+  background-position: right;
+  background-size: auto 100%;
+  background-repeat: no-repeat;
+  padding-left: 0;
+  padding-right: 0;
+  padding-bottom: 160px;
+  min-height: 300px;
 }
- @media(max-width:1100px){
-   .introduction{
+
+@media (max-width: 1100px) {
+  .introduction {
     background-size: 100% 100%;
     margin-top: 50px;
     margin-bottom: 50px;
-   }
- }
-.introduction-content{
-    width: 60%;
-    padding: 5% 10% 0 10%;
-    box-sizing: border-box;
-    text-align: left;
+  }
 }
-@media(max-width:1100px){
-    .introduction-content{
-        width: 100%;
-        text-align: center;
-    }
+.introduction-content {
+  width: 60%;
+  padding: 5% 10% 0 10%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  text-align: left;
 }
-.introduction-content h3{
-    color: #ff6d6d;
-    font-family: 'Exo', sans-serif;
-    margin-bottom: 15px;
-   font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-size: 1.2em;
-    margin-top: 5%;
 
+@media (max-width: 1100px) {
+  .introduction-content {
+    width: 100%;
+    text-align: center;
+  }
 }
-.introduction-content h2{
-    margin-bottom: 50px;
-    font-family: 'Exo',sa;
-    font-size: 40px;
-    line-height: 50px;
-    letter-spacing: 1px;
-    font-weight: 600;
+.introduction-content h3 {
+  color: #ff6d6d;
+  font-family: "Exo", sans-serif;
+  margin-bottom: 15px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 1.2em;
+  margin-top: 5%;
 }
-.introduction p{
-    color: #282828;
-    margin-bottom: 40px;
-    font-family: 'Exo',sans-serif;
-    font-size: 16px;
-    font-weight: 500;
+
+.introduction-content h2 {
+  margin-bottom: 50px;
+  font-family: "Exo", sa;
+  font-size: 40px;
+  line-height: 50px;
+  letter-spacing: 1px;
+  font-weight: 600;
 }
-.dots{
-    color: #ff6d6d;
-    font-size: 2emx;
+
+.introduction p {
+  color: #282828;
+  margin-bottom: 40px;
+  font-family: "Exo", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.dots {
+  color: #ff6d6d;
+  font-size: 2emx;
 }
